@@ -710,6 +710,14 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 </tr>
 <tr>
 	<td bgcolor="#ddddff">
+		$g_hide_closed_default
+	</td>
+	<td bgcolor="#ffffff">
+		Site defaults for viewing preferences.
+	</td>
+</tr>
+<tr>
+	<td bgcolor="#ddddff">
 		$g_min_refresh_delay
 	</td>
 	<td bgcolor="#ffffff">
